api-gateway/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: ingress_http
                codec_type: AUTO

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_services
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grpc_backend

                          # ВАЖНО: Настройка CORS "на уровне маршрута"
                          cors:
                            allow_origin_string_match:
                              - safe_regex:
                                  google_re2: {}
                                  regex: ".*"
                            allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                            allow_headers: "Content-Type, Authorization"
                            expose_headers: "Content-Length, Content-Type"
                            max_age: "1728000"
                            allow_credentials: true

                http_filters:
                  # Остальные фильтры, например gRPC-Web
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"

  clusters:
    - name: grpc_backend
      connect_timeout: 1.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 57442

admin:
  access_log_path: "/tmp/envoy_admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
